--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "nodemon": "^2.0.22"
   }
 }
